# ------------------------------------------------------------------------------
#  ChangeLog
#  This file is part of Unifix BWidget Toolkit
#  $Id: ChangeLog,v 1.212 2009/09/10 19:00:51 oberdorfer Exp $
# ------------------------------------------------------------------------------

2009-09-05 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

	*** BWidget revitalization to make usage of ttk ***
        * pkgIndex.tcl,   updated to 1.9.1, themeutils.tcl added, requ.
	                  initialization sequence
	* themeutils.tcl, theme support file added
	* widget.tcl,     various changes related to ttk added
	* init,tcl,       BWidget::set_themedefaults "initialize" added
	* --
	  arrow.tcl, button.tcl, buttonbox.tcl, color.tcl, dialog.tcl,
	  entry.tcl, font.tcl, label.tcl, labelframe.tcl, 
	  listbox.tcl, mainframe.tcl, messagedlg.tcl, pagesmgr.tcl,
	  panedw.tcl, panelframe.tcl, passwddlg.tcl, progressbar.tcl,
	  scrollframe.tcl, scrollview.tcl, scrollw.tcl, separator.tcl,
	  spinbox.tcl, statusbar.tcl, titleframe.tcl, combobox.tcl,
	  notebook.tcl
  	  -- theme related mod's done
	* utils.tcl, BWidget::bindMiddleMouseMovement added,
	* tree.tcl,  BWidget::bindMiddleMouseMovement added),
		    
          -- open issues:
	       Tk*Font as default font (like in dynhelp.tcl),
	       tree.tcl _themechanged proc' not perfect for existing
	       tree item colorization (expanding a branch after changing
	       the style still shows the previous fill color !)

          -- note: --
	  **** package ready for testing ***

2009-09-03 Harald Oehlmann  <oehhar@users.sourceforge.net>

	* util.tcl(BWidget::place), BWidget.html Widget placed incorrectly,
	when bigger than current screen [Bug 2850031] by Thomas Grausgruber
	Possible incompatibility: BWidget::place w h -> w,h are reduced to
	screen width.
	* dynhelp.tcl Added part of last patch, for pre 8.5 tcl from BWidget
    branch [Patch 2835180].

2009-08-12 Harald Oehlmann  <oehhar@users.sourceforge.net>
